@@ -15,6 +15,7 @@ Changes for 1.3.5.2
 -Added an option to enable the background game controller input handling
 -Portal warps have been allowed to be used for level entrances and level exits (Instant warps kept unsupported to avoid possible compatibility issues)
 -Added the cannon pipes that can shoot the player with a given speed
+-Added the workaround for custom background2-42 that has non-multiple 4 height (there are several custom sprites with the 3455 invalid height, they must be 3466)
 
 Changes for 1.3.5.1
 -Episodes and battle levels lists now loading in the separated thread with a progress showing
